--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_my_profile_info.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_my_profile_info.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".Fragments.FragmentMyProfileInfo">
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -46,6 +48,7 @@
             android:drawableLeft="@drawable/ic_outline_share_24"
             android:text="Pozovite prijatelje" />
     </LinearLayout>
+</ScrollView>
 
     <Button
         android:id="@+id/buttonLogOut"
