--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_change_password.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_change_password.xml
@@ -85,7 +85,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:text="Nova lozinka"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnActivityChangePasswordForgottenPass" />
@@ -127,6 +127,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
+        android:visibility="invisible"
         android:text="Zaboravljena lozinka?"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -173,6 +174,6 @@
         android:layout_height="wrap_content"
         android:text="ErrorMessage"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnActivityChangePasswordForgottenPass" />
+        app:layout_constraintTop_toTopOf="@+id/btnActivityChangePasswordForgottenPass" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
